# env-var-edit

./: CMakeLists.txt
src/: editvar.c  editvar.h  environment.c  main.c  precomp.h  resize-dlg.cc  resource.h  resource.rc  util.c
